Updated the README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "fish_vars"
 version = "0.1.0"
 authors = ["Josh Horwitz <joshua.d.horwitz@gmail.com>"]
 description = "Command line program to quickly add a path variable to your Fish Shell config file"
+readme = "README.md"
 license = "MIT"
 
 [dependencies]
